--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
   </head>
   <body>
-    <nav
+    <!-- <nav
       class="nav"
       id="nav-menu"
     >
@@ -62,6 +62,54 @@
           >Resume</a
         >
       </div>
+    </nav> -->
+    <nav id="nav-menu">
+      <ul>
+        <li>
+          <a
+            class="nav-link home"
+            href="#home"
+            >Home</a
+          >
+        </li>
+        <li>
+          <a
+            class="nav-link about"
+            href="#about"
+            >About</a
+          >
+        </li>
+        <li>
+          <a
+            class="nav-link skills"
+            href="#skills"
+            >Skills</a
+          >
+        </li>
+        <li>
+          <a
+            class="nav-link projects"
+            href="#projects"
+            >Projects</a
+          >
+        </li>
+        <li>
+          <a
+            class="nav-link contact"
+            href="#contact"
+            >Contact</a
+          >
+        </li>
+        <li>
+          <a
+            class="nav-link resume"
+            href="#"
+            id="resume-link-1"
+            target="_blank"
+            >Resume</a
+          >
+        </li>
+      </ul>
     </nav>
   </body>
 </html>
