--- a/index.html
+++ b/index.html
@@ -9,17 +9,13 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <nav
-      class="nav"
-      id="nav-menu"
-    >
-      <div class="container">
-        <h1 class="logo"><a href="index.htm">AKASH SHARMA</a></h1>
+    <section class="container">
+      <nav id="nav-menu">
         <ul>
           <li>
             <a
-              href="index.html"
               class="nav-link home"
+              href="#home"
               >Home</a
             >
           </li>
@@ -27,15 +23,13 @@
             <a
               class="nav-link about"
               href="#about"
-              data-scroll
-              >About Me</a
+              >About</a
             >
           </li>
           <li>
             <a
               class="nav-link skills"
               href="#skills"
-              data-scroll
               >Skills</a
             >
           </li>
@@ -43,7 +37,6 @@
             <a
               class="nav-link projects"
               href="#projects"
-              data-scroll
               >Projects</a
             >
           </li>
@@ -51,65 +44,20 @@
             <a
               class="nav-link contact"
               href="#contact"
-              data-scroll
               >Contact</a
             >
           </li>
+          <li>
+            <a
+              class="nav-link resume"
+              href="#"
+              id="resume-link-1"
+              target="_blank"
+              >Resume</a
+            >
+          </li>
         </ul>
-        <a
-          href=""
-          class="nav-link resume"
-          >Resume</a
-        >
-      </div>
-    </nav> -->
-    <nav id="nav-menu">
-      <ul>
-        <li>
-          <a
-            class="nav-link home"
-            href="#home"
-            >Home</a
-          >
-        </li>
-        <li>
-          <a
-            class="nav-link about"
-            href="#about"
-            >About</a
-          >
-        </li>
-        <li>
-          <a
-            class="nav-link skills"
-            href="#skills"
-            >Skills</a
-          >
-        </li>
-        <li>
-          <a
-            class="nav-link projects"
-            href="#projects"
-            >Projects</a
-          >
-        </li>
-        <li>
-          <a
-            class="nav-link contact"
-            href="#contact"
-            >Contact</a
-          >
-        </li>
-        <li>
-          <a
-            class="nav-link resume"
-            href="#"
-            id="resume-link-1"
-            target="_blank"
-            >Resume</a
-          >
-        </li>
-      </ul>
-    </nav>
+      </nav>
+    </section>
   </body>
 </html>
