--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <link
+      rel="stylesheet"
+      href="index.css"
+    />
     <title>Document</title>
   </head>
   <body>
     <section class="container">
-      <nav id="nav-menu">
-        <ul>
+      <!-- <nav id="nav-menu">
+        <ul class="nav-links">
           <li>
             <a
               class="nav-link home"
@@ -57,7 +61,55 @@
             >
           </li>
         </ul>
+        <hr class="hr-line" />
+      </nav> -->
+
+      <nav id="nav-menu">
+        <a
+          class="nav-link home"
+          href="#home"
+          >Home</a
+        >
+        <a
+          class="nav-link about"
+          href="#about"
+          >About</a
+        >
+        <a
+          class="nav-link skills"
+          href="#skills"
+          >Skills</a
+        >
+        <a
+          class="nav-link projects"
+          href="#projects"
+          >Projects</a
+        >
+        <a
+          class="nav-link contact"
+          href="#contact"
+          >Contact</a
+        >
+        <a
+          class="nav-link resume"
+          href="#"
+          id="resume-link-1"
+          target="_blank"
+          >Resume</a
+        >
       </nav>
     </section>
+
+    <img
+      src="https://images.unsplash.com/photo-1689852484069-3e0fe82cc7c1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80"
+      alt=""
+    />
+
+    <img
+      src="https://images.pexels.com/photos/4246192/pexels-photo-4246192.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+      alt=""
+    />
   </body>
+
+  <script src="index.js"></script>
 </html>
