--- a/index.html
+++ b/index.html
@@ -100,16 +100,15 @@
       </nav>
     </section>
 
-    <img
-      src="https://images.unsplash.com/photo-1689852484069-3e0fe82cc7c1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80"
-      alt=""
-    />
-
-    <img
-      src="https://images.pexels.com/photos/4246192/pexels-photo-4246192.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-      alt=""
-    />
+    <!-- home-section -->
+    <div
+      id="home"
+      class="title"
+    >
+      <h1 id="user-detail-name">AKASH SHARMA</h1>
+      <h2>Full Stack Developer</h2>
+    </div>
   </body>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="index.js"></script>
 </html>
