--- a/index.html
+++ b/index.html
@@ -13,57 +13,8 @@
     <title>Document</title>
   </head>
   <body>
+    <section id="canvas"></section>
     <section class="container">
-      <!-- <nav id="nav-menu">
-        <ul class="nav-links">
-          <li>
-            <a
-              class="nav-link home"
-              href="#home"
-              >Home</a
-            >
-          </li>
-          <li>
-            <a
-              class="nav-link about"
-              href="#about"
-              >About</a
-            >
-          </li>
-          <li>
-            <a
-              class="nav-link skills"
-              href="#skills"
-              >Skills</a
-            >
-          </li>
-          <li>
-            <a
-              class="nav-link projects"
-              href="#projects"
-              >Projects</a
-            >
-          </li>
-          <li>
-            <a
-              class="nav-link contact"
-              href="#contact"
-              >Contact</a
-            >
-          </li>
-          <li>
-            <a
-              class="nav-link resume"
-              href="#"
-              id="resume-link-1"
-              target="_blank"
-              >Resume</a
-            >
-          </li>
-        </ul>
-        <hr class="hr-line" />
-      </nav> -->
-
       <nav id="nav-menu">
         <a
           class="nav-link home"
@@ -108,6 +59,31 @@
       <h1 id="user-detail-name">AKASH SHARMA</h1>
       <h2>Full Stack Developer</h2>
     </div>
+
+    <!-- about-section -->
+    <section
+      id="about"
+      class="about section"
+    >
+      <h1>About me</h1>
+      <div class="img-container">
+        <img
+          class="home-img"
+          src="profile.jpg"
+          alt=""
+        />
+      </div>
+      <div class="my-story">
+        <p id="user-detail-intro">
+          Hello! I am a passionate and dedicated Full-Stack Developer with a
+          keen interest in creating innovative web applications and digital
+          experiences.As a continuous learner, I keep myself abreast of the
+          latest industry trends and technologies.Passionate about creating
+          clean and efficient code, I always strive for optimized performance
+          and maintainability.
+        </p>
+      </div>
+    </section>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="index.js"></script>
