--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     />
     <link
       rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="index.css"
     />
     <title>Document</title>
@@ -58,6 +62,13 @@
     >
       <h1 id="user-detail-name">AKASH SHARMA</h1>
       <h2>Full Stack Developer</h2>
+      <a
+        class="nav-link resume"
+        href="#"
+        id="resume-link-2"
+        target="_blank"
+        >Resume <i class="fa-solid fa-download"></i
+      ></a>
     </div>
 
     <!-- about-section -->
@@ -65,7 +76,7 @@
       id="about"
       class="about section"
     >
-      <h1>About me</h1>
+      <h1>About Me</h1>
       <div class="img-container">
         <img
           class="home-img"
@@ -77,14 +88,26 @@
         <p id="user-detail-intro">
           Hello! I am a passionate and dedicated Full-Stack Developer with a
           keen interest in creating innovative web applications and digital
-          experiences.As a continuous learner, I keep myself abreast of the
-          latest industry trends and technologies.Passionate about creating
-          clean and efficient code, I always strive for optimized performance
-          and maintainability.
+          experiences.As a continuous learner,Passionate about creating clean
+          and efficient code, I always strive for optimized performance and
+          maintainability.I have completed my Bachelor of Computer Application
+          from Chaudhary Charan Singh University, Uttar Pradesh.
         </p>
       </div>
     </section>
+
+    <!-- skill-section -->
+
+    <div id="skills">
+      <h1>Tech Skills</h1>
+      <div class="skills-container"></div>
+    </div>
   </body>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="index.js"></script>
+  <script
+    src="https://kit.fontawesome.com/857cd95f0d.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
