--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
     <!-- skill-section -->
 
     <div id="skills">
-      <h1>Tech Skills</h1>
-      <div class="skills-container"></div>
+      <!-- <h1>Tech Skills</h1> -->
+      <!-- <div class="skills-container"></div> -->
     </div>
   </body>
 
