--- a/index.html
+++ b/index.html
@@ -97,10 +97,9 @@
     </section>
 
     <!-- skill-section -->
-
-    <div id="skills">
-      <!-- <h1>Tech Skills</h1> -->
-      <!-- <div class="skills-container"></div> -->
+    <div id="skill-container">
+      <h1>Tech Skills</h1>
+      <div id="skills"></div>
     </div>
   </body>
 
