--- a/index.html
+++ b/index.html
@@ -98,9 +98,15 @@
 
     <!-- skill-section -->
     <div id="skill-container">
-      <h1>Tech Skills</h1>
+      <h1>Technical Skills</h1>
       <div id="skills"></div>
     </div>
+
+    <!-- projects-section -->
+    <div id="projects">
+      <h1>My Projects</h1>
+    </div>
+    
   </body>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
