--- a/index.html
+++ b/index.html
@@ -103,9 +103,12 @@
     </div>
 
     <!-- projects-section -->
-    <div id="projects">
+    <div class="project-container">
       <h1>My Projects</h1>
+      <div id="projects">
+      </div>
     </div>
+   
     
   </body>
 
