--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="index.css"
     />
-    <title>Document</title>
+    <title>Profile</title>
   </head>
   <body>
     <section id="canvas"></section>
@@ -103,11 +103,11 @@
     </div>
 
     <!-- projects-section -->
-    <div class="project-container">
+    <section id="project-container">
       <h1>My Projects</h1>
       <div id="projects">
       </div>
-    </div>
+    </section>
    
     
   </body>
