--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </div>
 
   <!-- projects-section -->
-  <section>
+  <section id="project-section">
     <h1>My Projects</h1>
     <div id="projects">
     </div>
