--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="index.css" />
+  <link
+  rel="stylesheet"
+  href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css"
+/>
   <title>Profile</title>
 </head>
 
@@ -18,7 +22,7 @@
       <a class="nav-link skills" href="#skills">Skills</a>
       <a class="nav-link projects" href="#projects">Projects</a>
       <a class="nav-link contact" href="#contact">Contact</a>
-      <a class="nav-link resume" href="#" id="resume-link-1" target="_blank">Resume</a>
+      <a class="nav-link resume" href="./Akash-Sharma-Resume.pdf" id="resume-link-2" target="_blank"  download="Akash-Sharma-Resume">Resume</a>
     </nav>
   </section>
 
@@ -26,7 +30,7 @@
   <div id="home" class="title">
     <h1 id="user-detail-name">AKASH SHARMA</h1>
     <h2>Full Stack Developer</h2>
-    <a class="nav-link resume" href="#" id="resume-link-2" target="_blank">Resume <i
+    <a class="nav-link resume" href="#" id="resume-link-1" target="_blank">Resume <i
         class="fa-solid fa-download"></i></a>
   </div>
 
@@ -60,6 +64,10 @@
     <div id="projects">
     </div>
   </section>
+  <div  id="" class="calendar react-activity-calendar" style="background-color: aquamarine;">
+    <!-- Loading stuff -->
+    Loading the data just for you.
+</div>
 
 
 </body>
@@ -67,5 +75,15 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="index.js"></script>
 <script src="https://kit.fontawesome.com/857cd95f0d.js" crossorigin="anonymous"></script>
+<script
+  src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"
+>
+</script>
 
+<script>
+  new GitHubCalendar(".calendar", "ak8459");
+</script>
 </html>
+
+
+
