--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="index.css" />
-  <link
-  rel="stylesheet"
-  href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css"
-/>
+  <link rel="stylesheet" href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css" />
   <title>Profile</title>
 </head>
 
@@ -22,7 +19,8 @@
       <a class="nav-link skills" href="#skills">Skills</a>
       <a class="nav-link projects" href="#projects">Projects</a>
       <a class="nav-link contact" href="#contact">Contact</a>
-      <a class="nav-link resume" href="./Akash-Sharma-Resume.pdf" id="resume-link-2" target="_blank"  download="Akash-Sharma-Resume">Resume</a>
+      <a class="nav-link resume" href="./Akash-Sharma-Resume.pdf" id="resume-link-2" target="_blank"
+        download="Akash-Sharma-Resume">Resume</a>
     </nav>
   </section>
 
@@ -64,10 +62,12 @@
     <div id="projects">
     </div>
   </section>
-  <div  id="" class="calendar react-activity-calendar" style="background-color: aquamarine;">
-    <!-- Loading stuff -->
-    Loading the data just for you.
-</div>
+
+
+  <section id="git-calendar">
+    <div class="calendar react-activity-calendar">
+    </div>
+  </section>
 
 
 </body>
@@ -75,15 +75,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="index.js"></script>
 <script src="https://kit.fontawesome.com/857cd95f0d.js" crossorigin="anonymous"></script>
-<script
-  src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"
->
+<script src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js">
 </script>
 
 <script>
   new GitHubCalendar(".calendar", "ak8459");
 </script>
+
+
 </html>
-
-
-
