--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
 
   <!-- about-section -->
-  <section id="about" class="about section">
+  <section id="about" class="about section psection">
     <h1>About Me</h1>
     <div class="img-container">
       <img class="home-img" src="profile.jpg" alt="" />
@@ -51,23 +51,34 @@
   </section>
 
   <!-- skill-section -->
-  <div id="skill-container">
+  <div id="skill-container" class="psection">
     <h1>Technical Skills</h1>
     <div id="skills"></div>
   </div>
 
   <!-- projects-section -->
-  <section id="project-section">
+  <section id="project-section"  class="psection">
     <h1>My Projects</h1>
     <div id="projects">
     </div>
   </section>
 
 
-  <section id="git-calendar">
+  <section id="git-calendar" class="psection">
+    <h1>My Github Calendar</h1>
     <div class="calendar react-activity-calendar">
     </div>
   </section>
+
+  <!-- git statistics -->
+
+  <section id="git-statistics">
+    <h1>My Github Statistics</h1>
+    <img src="./project-assest//git-streak.svg"  id="github-streak-stats" alt="">
+  <img src="./project-assest//git-stats.svg" id="github-stats-card" alt="">
+  </section>
+
+
 
 
 </body>
