--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </div>
 
   <!-- projects-section -->
-  <section id="project-section"  class="psection">
+  <section id="project-section" class="psection">
     <h1>My Projects</h1>
     <div id="projects">
     </div>
@@ -74,8 +74,8 @@
 
   <section id="git-statistics">
     <h1>My Github Statistics</h1>
-    <img src="./project-assest//git-streak.svg"  id="github-streak-stats" alt="">
-  <img src="./project-assest//git-stats.svg" id="github-stats-card" alt="">
+    <img src="./project-assest/git-streak.png" id="github-streak-stats" alt="">
+    <img src="./" id="github-stats-card" alt="">
   </section>
 
 
