--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   <section id="git-statistics">
     <h1>My Github Statistics</h1>
-    <img src="https://camo.githubusercontent.com/65b1fe29d1955d26dc53f65ad3b7960bb2ff5c8cee7742c47cd20bdb8bb6d199/68747470733a2f2f6769746875622d726561646d652d73747265616b2d73746174732e6865726f6b756170702e636f6d3f757365723d616b38343539267468656d653d7472616e73706172656e7426626f726465725f7261646975733d342e3426747970653d706e67" id="github-streak-stats" alt="">
+    <img src="https://github-readme-streak-stats.herokuapp.com/demo/preview.php?user=" id="github-streak-stats" alt="">
     <img src="./" id="github-stats-card" alt="">
   </section>
 
