--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!-- <img src="https://github-readme-streak-stats.herokuapp.com/demo/preview.php?user=" id="github-streak-stats" alt=""> -->
     <!-- <img src="./" id="github-stats-card" alt=""> -->
     <a href="https://git.io/streak-stats" >
-      <img src="https://streak-stats.demolab.com?user=ak8459" id="github-streak-stats"/>
+      <img src="https://github-readme-streak-stats.herokuapp.com?user=ak8459" id="github-streak-stats"/>
     </a>
   </section>
 
