--- a/index.html
+++ b/index.html
@@ -72,10 +72,14 @@
 
   <!-- git statistics -->
 
-  <section id="git-statistics">
-    <h1>My Github Statistics</h1>
+  <section id="git-statistics" class="psection">
+    <h1>Github Statistics</h1>
     <img src="https://github-readme-streak-stats.herokuapp.com?user=ak8459" id="github-streak-stats" />
+    <img src="https://github-readme-stats.vercel.app/api?username=ak8459&show_icons=true" id="github-stats-card"/>
   </section>
+
+
+<img  id="github-top-langs" src="https://github-readme-stats.vercel.app/api/top-langs/?username=ak8459&layout=donut" alt="">
 
 
 
