--- a/index.html
+++ b/index.html
@@ -73,15 +73,27 @@
   <!-- git statistics -->
 
   <section id="git-statistics" class="psection">
-    <h1>Github Statistics</h1>
+    <h1>My Github Statistics</h1>
     <img src="https://github-readme-streak-stats.herokuapp.com?user=ak8459" id="github-streak-stats" />
     <img src="https://github-readme-stats.vercel.app/api?username=ak8459&show_icons=true" id="github-stats-card"/>
+    <div id="github-top-langs">
+      <img  id="github-top-langs" src="https://github-readme-stats.vercel.app/api/top-langs/?username=ak8459&layout=compact" alt="">
+    </div>
   </section>
 
 
-<img  id="github-top-langs" src="https://github-readme-stats.vercel.app/api/top-langs/?username=ak8459&layout=donut" alt="">
+  <!-- contact-section -->
+  <section id="contact" >
+    <h2>Contact Me</h2>
+     
+    <div class="footer-contact">
+   <p  id="contact-phone" ><i class="fa-solid fa-mobile-screen-button"></i>  +918459148074 </p>
+   <a id="contact-email"><i class="fa-solid fa-envelope"></i>  akashsharma01247@gmail.com</a>
+   <p ><i class="fa-solid fa-location-dot"></i> New Delhi, India</p>
+   <a href=""><i class="fa-brands fa-github"></i></a>
+  </div>
 
-
+</section>
 
 
 </body>
