--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
     <h1>My Github Statistics</h1>
     <img src="https://github-readme-streak-stats.herokuapp.com?user=ak8459" id="github-streak-stats" />
     <img src="https://github-readme-stats.vercel.app/api?username=ak8459&show_icons=true" id="github-stats-card"/>
-    <div class="git-lang-container">
-      <img  id="github-top-langs" src="https://github-readme-stats.vercel.app/api/top-langs/?username=ak8459&layout=compact" alt="">
-    </div>
+    <!-- <div class="git-lang-container"> -->
+      <img  src="https://github-readme-stats.vercel.app/api/top-langs/?username=ak8459&layout=compact" alt="" id="github-top-langs">
+    <!-- </div> -->
   </section>
 
 
