--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@
     <img src="https://github-readme-streak-stats.herokuapp.com?user=ak8459" id="github-streak-stats" />
     <img src="https://github-readme-stats.vercel.app/api?username=ak8459&show_icons=true" id="github-stats-card"/>
     <!-- <div class="git-lang-container"> -->
-      <img  src="https://github-readme-stats.vercel.app/api/top-langs/?username=ak8459&layout=compact" alt="" id="github-top-langs">
+      <!-- <img  src="https://github-readme-stats.vercel.app/api/top-langs/?username=ak8459&layout=donut" alt="" id="github-top-langs"> -->
     <!-- </div> -->
+  </section>
+
+  <section id="top-lang-container">
+    <img  src="https://github-readme-stats.vercel.app/api/top-langs/?username=ak8459&layout=donut" alt="" id="github-top-langs">
   </section>
 
 
