--- a/index.html
+++ b/index.html
@@ -75,29 +75,32 @@
   <section id="git-statistics" class="psection">
     <h1>My Github Statistics</h1>
     <img src="https://github-readme-streak-stats.herokuapp.com?user=ak8459" id="github-streak-stats" />
-    <img src="https://github-readme-stats.vercel.app/api?username=ak8459&show_icons=true" id="github-stats-card"/>
+    <img src="https://github-readme-stats.vercel.app/api?username=ak8459&show_icons=true" id="github-stats-card" />
     <!-- <div class="git-lang-container"> -->
-      <!-- <img  src="https://github-readme-stats.vercel.app/api/top-langs/?username=ak8459&layout=donut" alt="" id="github-top-langs"> -->
+    <!-- <img  src="https://github-readme-stats.vercel.app/api/top-langs/?username=ak8459&layout=donut" alt="" id="github-top-langs"> -->
     <!-- </div> -->
   </section>
 
   <section id="top-lang-container">
-    <img  src="https://github-readme-stats.vercel.app/api/top-langs/?username=ak8459&layout=donut" alt="" id="github-top-langs">
+    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=ak8459&layout=donut" alt=""
+      id="github-top-langs">
   </section>
 
 
   <!-- contact-section -->
-  <section id="contact" >
+  <section id="contact">
     <h2>Contact Me</h2>
-     
-    <div class="footer-contact">
-   <p  id="contact-phone" ><i class="fa-solid fa-mobile-screen-button"></i>  +918459148074 </p>
-   <a id="contact-email"><i class="fa-solid fa-envelope"></i>  akashsharma01247@gmail.com</a>
-   <p ><i class="fa-solid fa-location-dot"></i> New Delhi, India</p>
-   <a href=""><i class="fa-brands fa-github"></i></a>
-  </div>
 
-</section>
+    <div class="footer-contact">
+      <p id="contact-phone"><i class="fa-solid fa-mobile-screen-button"></i> +918459148074 </p>
+      <a id="contact-email"><i class="fa-solid fa-envelope"></i> akashsharma01247@gmail.com</a>
+      <p><i class="fa-solid fa-location-dot"></i> New Delhi, India</p>
+      <a  id="contact-github" href="https://github.com/ak8459" target="_blank"><i class="fa-brands fa-github"></i>Github</a>
+      <a  id="contact-linkedin" href="https://www.linkedin.com/in/akash-sharma-7671b91b2/" target="_blank"><i
+          class="fa-brands fa-linkedin"></i>Linkedin</a>
+    </div>
+
+  </section>
 
 
 </body>
