--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
 
 
   <!-- contact-section -->
-  <section id="contact">
+  <section id="contact" class="psection">
     <h2>Contact Me</h2>
 
     <div class="footer-contact">
       <p id="contact-phone"><i class="fa-solid fa-mobile-screen-button"></i> +918459148074 </p>
-      <a id="contact-email"><i class="fa-solid fa-envelope"></i> akashsharma01247@gmail.com</a>
+      <p id="contact-email"><i class="fa-solid fa-envelope"></i> akashsharma01247@gmail.com<p/>
       <p><i class="fa-solid fa-location-dot"></i> New Delhi, India</p>
       <a  id="contact-github" href="https://github.com/ak8459" target="_blank"><i class="fa-brands fa-github"></i>Github</a>
       <a  id="contact-linkedin" href="https://www.linkedin.com/in/akash-sharma-7671b91b2/" target="_blank"><i
@@ -117,3 +117,7 @@
 
 
 </html>
+
+
+
+
