--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- 
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,7 +25,7 @@
     </nav>
   </section>
 
-  <!-- home-section -->
+  home-section
   <div id="home" class="title">
     <h1 id="user-detail-name">AKASH SHARMA</h1>
     <h2>Full Stack Developer</h2>
@@ -32,7 +33,7 @@
         class="fa-solid fa-download"></i></a>
   </div>
 
-  <!-- about-section -->
+  about-section
   <section id="about" class="about section psection">
     <h1>About Me</h1>
     <div class="img-container">
@@ -50,13 +51,13 @@
     </div>
   </section>
 
-  <!-- skill-section -->
+  skill-section
   <div id="skill-container" class="psection">
     <h1>Technical Skills</h1>
     <div id="skills"></div>
   </div>
 
-  <!-- projects-section -->
+  projects-section
   <section id="project-section" class="psection">
     <h1>My Projects</h1>
     <div id="projects">
@@ -70,15 +71,13 @@
     </div>
   </section>
 
-  <!-- git statistics -->
+  git statistics
 
   <section id="git-statistics" class="psection">
     <h1>My Github Statistics</h1>
     <img src="https://github-readme-streak-stats.herokuapp.com?user=ak8459" id="github-streak-stats" />
     <img src="https://github-readme-stats.vercel.app/api?username=ak8459&show_icons=true" id="github-stats-card" />
-    <!-- <div class="git-lang-container"> -->
-    <!-- <img  src="https://github-readme-stats.vercel.app/api/top-langs/?username=ak8459&layout=donut" alt="" id="github-top-langs"> -->
-    <!-- </div> -->
+   
   </section>
 
   <section id="top-lang-container">
@@ -87,16 +86,18 @@
   </section>
 
 
-  <!-- contact-section -->
+  contact-section
   <section id="contact" class="psection">
     <h2>Contact Me</h2>
 
     <div class="footer-contact">
       <p id="contact-phone"><i class="fa-solid fa-mobile-screen-button"></i> +918459148074 </p>
-      <p id="contact-email"><i class="fa-solid fa-envelope"></i> akashsharma01247@gmail.com<p/>
+      <p id="contact-email"><i class="fa-solid fa-envelope"></i> akashsharma01247@gmail.com
+        <p />
       <p><i class="fa-solid fa-location-dot"></i> New Delhi, India</p>
-      <a  id="contact-github" href="https://github.com/ak8459" target="_blank"><i class="fa-brands fa-github"></i>Github</a>
-      <a  id="contact-linkedin" href="https://www.linkedin.com/in/akash-sharma-7671b91b2/" target="_blank"><i
+      <a id="contact-github" href="https://github.com/ak8459" target="_blank"><i
+          class="fa-brands fa-github"></i>Github</a>
+      <a id="contact-linkedin" href="https://www.linkedin.com/in/akash-sharma-7671b91b2/" target="_blank"><i
           class="fa-brands fa-linkedin"></i>Linkedin</a>
     </div>
 
@@ -116,8 +117,33 @@
 </script>
 
 
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+
+<body>
+  <nav id="nav-menu">
+    <div class="logo">John Doe</div>
+    <div>
+      <ul class="nav-links">
+        <li><a href="#home" class="nav-link home">Home</a></li>
+        <li><a href="#about" class="nav-link about">About</a></li>
+        <li><a href="#experience" class="nav-link skils">Skills</a></li>
+        <li><a href="#projects" class="nav-link projects">Projects</a></li>
+        <li><a href="#contact" class="nav-link contact">Contact</a></li>
+        <li><a href="#contact" class="nav-link resume">resume</a></li>
+      </ul>
+    </div>
+  </nav>
+
+</body>
+
 </html>
-
-
-
-
