--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <li><a href="#experience" class="nav-link skils">Skills</a></li>
         <li><a href="#projects" class="nav-link projects">Projects</a></li>
         <li><a href="#contact" class="nav-link contact">Contact</a></li>
-        <li><a href="#contact" class="nav-link resume">resume</a></li>
+        <li><a class="nav-link resume">resume</a></li>
       </ul>
     </div>
   </nav>
