--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <ul class="nav-links">
         <li><a href="#home" class="nav-link home">Home</a></li>
         <li><a href="#about" class="nav-link about">About</a></li>
-        <li><a href="#experience" class="nav-link skils">Skills</a></li>
+        <li><a href="#skills" class="nav-link skills">Skills</a></li>
         <li><a href="#projects" class="nav-link projects">Projects</a></li>
         <li><a href="#contact" class="nav-link contact">Contact</a></li>
         <li><a class="nav-link resume">resume</a></li>
