--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
 </head>
 
 <body>
-  <nav id="nav-menu">
+  <nav>
     <div class="logo">John Doe</div>
     <div>
-      <ul class="nav-links">
+      <ul class="nav-links" id="nav-menu">
         <li><a href="#home" class="nav-link home">Home</a></li>
         <li><a href="#about" class="nav-link about">About</a></li>
         <li><a href="#skills" class="nav-link skills">Skills</a></li>
