--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
     </section>
   </section>
 
-  <section id="skills">
-    <section id="experience">
+ 
+    <section class="experience" id="skills">
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Skills</h1>
       <div class="experience-details-container">
@@ -317,7 +317,7 @@
       </div>
       <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
     </section>
-  </section>
+  
 
 
 
