--- a/index.html
+++ b/index.html
@@ -189,9 +189,8 @@
   </section>
 
 
-  <section id="about">
-
-    <section class="about section">
+  
+    <section id="about" class="about section">
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
@@ -225,7 +224,7 @@
       </div>
       <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
     </section>
-  </section>
+
 
  
     <section class="experience" id="skills">
