--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     <h1 class="title">Projects</h1>
     <div class="experience-details-container">
       <div class="about-containers">
-        <div class="details-container color-container">
+        <div class="details-container color-container project-card">
           <div class="article-container">
             <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
           </div>
@@ -343,7 +343,7 @@
           </div>
         </div>
 
-        <div class="details-container color-container">
+        <div class="details-container color-container project-card">
           <div class="article-container">
             <img src="./assets/project-2.png" alt="Project 2" class="project-img" />
           </div>
@@ -358,7 +358,7 @@
           </div>
         </div>
 
-        <div class="details-container color-container">
+        <div class="details-container color-container project-card">
           <div class="article-container">
             <img src="./assets/project-3.png" alt="Project 3" class="project-img" />
           </div>
