--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@
             <div class="article-container">
               <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
             </div>
-            <h2 class="project-title  experience-sub-title project-title ">Project One</h2>
-            <p class="project-description">hihdisfhf</p>
+            <h2 class="project-title  experience-sub-title ">Project One</h2>
+            <p class="project-description">hihdisfdfvfbhf</p>
             <p class="project-tech-stack">html,css,js</p>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn project-github-link"
