--- a/index.html
+++ b/index.html
@@ -324,25 +324,22 @@
     <h1 class="title">Projects</h1>
     <div class="experience-details-container">
       <div class="about-containers">
-        <div class="details-container color-container">
-
-          <span class="project-card">
-            <div class="article-container">
-              <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
-            </div>
-            <h2 class="project-title  experience-sub-title ">Project One</h2>
-            <p class="project-description">hihdisfdfvfbhf</p>
-            <p class="project-tech-stack">html,css,js</p>
-            <div class="btn-container">
-              <button class="btn btn-color-2 project-btn project-github-link"
-                onclick="location.href='https://github.com/'">
-                Github
-              </button>
-              <button class="btn btn-color-2 project-btn  project-deployed-link"
-                onclick="location.href='https://github.com/'">
-                Live Demo
-              </button>
-          </span>
+        <div class="details-container color-container project-card"">
+         
+            <div class=" article-container">
+          <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
+        </div>
+        <h2 class="project-title  experience-sub-title ">Project One</h2>
+        <p class="project-description">hihdisfdfvfbhf</p>
+        <p class="project-tech-stack">html,css,js</p>
+        <div class="btn-container">
+          <button class="btn btn-color-2 project-btn project-github-link" onclick="location.href='https://github.com/'">
+            Github
+          </button>
+          <button class="btn btn-color-2 project-btn  project-deployed-link"
+            onclick="location.href='https://github.com/'">
+            Live Demo
+          </button>
 
         </div>
       </div>
