--- a/index.html
+++ b/index.html
@@ -344,16 +344,19 @@
         </div>
       </div>
 
-      <!-- <div class="details-container color-container project-card">
+      <div class="details-container color-container project-card">
         <div class="article-container">
           <img src="./assets/project-2.png" alt="Project 2" class="project-img" />
         </div>
         <h2 class="experience-sub-title project-title">Project Two</h2>
+        <p class="project-description">hihdisfdfvfbhf</p>
+        <p class="project-tech-stack">html,css,js</p>
         <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+          <button class="btn btn-color-2 project-btn project-github-link" onclick="location.href='https://github.com/'">
             Github
           </button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+          <button class="btn btn-color-2 project-btn project-deployed-link"
+            onclick="location.href='https://github.com/'">
             Live Demo
           </button>
         </div>
@@ -364,11 +367,14 @@
           <img src="./assets/project-3.png" alt="Project 3" class="project-img" />
         </div>
         <h2 class="experience-sub-title project-title">Project Three</h2>
+        <p class="project-description">hihdisfdfvfbhf</p>
+        <p class="project-tech-stack">html,css,js</p>
         <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+          <button class="btn btn-color-2 project-btn project-github-link" onclick="location.href='https://github.com/'">
             Github
           </button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+          <button class="btn btn-color-2 project-btn project-deployed-link"
+            onclick="location.href='https://github.com/'">
             Live Demo
           </button>
         </div>
@@ -379,15 +385,18 @@
           <img src="./assets/project-3.png" alt="Project 3" class="project-img" />
         </div>
         <h2 class="experience-sub-title project-title">Project four</h2>
+        <p class="project-description">hihdisfdfvfbhf</p>
+        <p class="project-tech-stack">html,css,js</p>
         <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+          <button class="btn btn-color-2 project-btn project-github-link" onclick="location.href='https://github.com/'">
             Github
           </button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+          <button class="btn btn-color-2 project-btn project-deployed-link"
+            onclick="location.href='https://github.com/'">
             Live Demo
           </button>
         </div>
-      </div> -->
+      </div>
 
 
     </div>
